Repository and service module migrated to JDK 9.